# latticepts

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  environment-bench.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  deploy.yml
benchmarks/: _bench.py  benchmark_box_enum.py  benchmark_cytools.py  benchmark_enum_lattice_points.py  benchmark_narrowness.py  benchmark_polytopes.py  benchmark_threads.py
conevecs/: __init__.py  box_enum.h  box_enum.pyx  conevecs.py
conevecs/testing_benchmarks/: Makefile
convecs/: conevecs_kernel.h  conevecs_kernel.pyx  convec_kernel.pyx  pvec_kernel.h  pvec_kernel.pyx
convecs/testing_benchmarks/: Makefile  benchmark_conevecs_kernel.sh  benchmark_convec_kernel.sh  test_conevecs_kernel.c  test_convec_kernel.c
latticepts/: __init__.py  box_enum.h  box_enum.pyi  box_enum.pyx  box_enum_omp.h  latticepts.py
reference/: kannan_reference.py
tests/: README.md  benchmark_box_enum.py  benchmark_cytools.py  benchmark_enum_lattice_points.py  benchmark_narrowness.py  conftest.py  scratch_cone_width.py  test_box_enum.py  test_conevecs_kernel.py  test_convec_kernel.py  test_enum_lattice_points.py  test_manwe.py  test_readme.py
tests/c/: Makefile  benchmark_box_enum.sh  test_box_enum.c  test_n_nodes_bug.c
