[build-system]
requires = [
    "setuptools>=64",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "conevecs"
version = "0.0.1"
description = "A software package for enumerating lattice points in convex cones"
authors = [{ name = "Nate MacFadden for the Liam McAllister Group" }]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["lattice", "enumeration", "convex cone", "Kannan", "geometry of numbers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-benchmark",
  "ortools",
  "PyNormaliz",
]

[project.urls]
Repository = "https://github.com/natmacfadden/conevecs"

[tool.setuptools]
packages = ["conevecs"]
