[build-system]
requires = [
    "setuptools>=64",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "latticepts"
version = "0.3.0"
description = "A software package for enumerating lattice points in convex polyhedra"
authors = [{ name = "Nate MacFadden for the Liam McAllister Group" }]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["lattice", "enumeration", "convex polyhedron", "Kannan", "geometry of numbers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-benchmark",
  "ortools",
  "PyNormaliz",
]
# only needed to run reference/kannan_reference.py (the pedagogical port);
# not required by latticepts itself
reference = [
  "numba",
]

[project.urls]
Repository = "https://github.com/natemacfadden/latticepts"

[tool.setuptools]
packages = ["latticepts"]

[tool.setuptools.package-data]
latticepts = ["*.pyx", "*.pxd", "*.h", "*.c"]
